# slurm-snap

./: .editorconfig  .gitignore  .yamllint  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  nightly-TICS.yaml  promote-to-stable.yaml  release-to-candidate.yaml
overlays/munge/sbin/: munged.wrapper
overlays/sbin/: munged.wrapper  prometheus-slurm-exporter.wrapper  slurmctld.wrapper  slurmd.wrapper  slurmrestd.wrapper
overlays/slurm/sbin/: slurmctld.wrapper  slurmd.wrapper  slurmdbd.wrapper  slurmrestd.wrapper
overlays/templates/: logrotate.conf.tmpl
patches/slurm/: 0001-set-default-plugin-and-config-location.patch
slurmhelpers/: hooks.py  log.py  models.py
snap/: snapcraft.yaml
snap/hooks/: configure  install
src/mungectl/: Makefile  go.mod
src/mungectl/cmd/mungectl/: main.go
src/mungectl/cmd/mungectl/cmd/: generate.go  get.go  root.go  set.go
src/mungectl/cmd/mungectl/cmd/key/: generate.go  get.go  root.go  set.go
src/mungectl/internal/key/: key.go  key_test.go
src/slurmhelpers/: __init__.py  hooks.py  models.py
tests/integration/configless-slurm/: configless-slurm.yaml
tests/integration/configless-slurm/testdata/: exports.conf  glauth.conf  slurm.conf  sssd.conf
tests/unit/: conftest.py  test_hooks.py  test_models.py
